fixed keycaps not showing

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ canvas#bg {
     position: absolute;
     margin-top: 2px;
     margin-left: 20px;
-    color: blue;
+    color: red;
     font-size: 24px;
     pointer-events: none;
 }
